fix(sheet): column resizing
* add test
* number of COL-tags match number of TH/TD tags
* scrollbar spacer is now a <table> instead of an additional <th> tag. The header and the body have now the same amount of COL/TH/TD tags, which makes it easier to have the same sizes for header and body.
* add CSS classes "tobago-row-filler" and "tobago-behavior-container" to COL/TH/TD tags. This makes it clearer what the last two COLs are for.
* replace deprecated <col> width-attribute with CSS width attribute from <style> tag.
* CSS width can now be set as calc() value
* initialization of column width no longer needed in TypeScript; so this is removed
* refactor TypeScript column resizing
* add an observer to show/hide scrollbar filler, depending on whether the sheet body has a scrollbar or not

Issue: TOBAGO-2374, TOBAGO-2378, TOBAGO-2379

--- a/tobago-theme/src/main/scss/_tobago.scss
+++ b/tobago-theme/src/main/scss/_tobago.scss
@@ -1625,8 +1625,6 @@ tobago-separator {
   }
 }
 
-/* sheet -------------------------------------------------------------- */
-
 tobago-sheet {
   display: flex;
   flex-direction: column;
@@ -1636,6 +1634,7 @@ tobago-sheet {
   }
 
   header {
+    display: flex;
     overflow-x: hidden;
     flex-shrink: 0; //if "column" attribute used: header must remain same height (fix overflow hidden)
 
@@ -1645,6 +1644,18 @@ tobago-sheet {
       th {
         position: relative;
         overflow: hidden;
+      }
+    }
+
+    .table.tobago-scrollbar-filler {
+      display: none;
+
+      &.tobago-show {
+        display: table;
+      }
+
+      th {
+        padding: 0;
       }
     }
   }
@@ -1719,10 +1730,6 @@ tobago-sheet {
       td {
         overflow: hidden;
 
-        &.tobago-behavior-container {
-          display: none;
-        }
-
         @include treeNodeMarginLeftLevel();
 
         > input.tobago-selected {
@@ -1745,6 +1752,12 @@ tobago-sheet {
           }
         }
       }
+    }
+  }
+
+  header th, .tobago-body th, .tobago-body td {
+    &.tobago-behavior-container {
+      display: none;
     }
   }
 
